feat(book): add type gymnastics brochure

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "stripInternal": true,
     "pretty": true,
     "declaration": true,
+    "strictFunctionTypes": true,
     "outDir": "lib",
     "baseUrl": "./",
     "paths": {
